@@ -22,6 +22,7 @@
   * Alphabetize slices in slice list (#788)
   * Comment out a debug (#798)
   * Log if the pretty RSpec printer is skipping a node as not for this AM (#803)
+  * Handle bulk upload file with 0 valid email addresses (#802)
 
 == 2.1 ==
   * Revise handling of Google Analytics (#742)
